versioned_docs/version-2.2.x/6_exports.mdx
---
sidebar_position: 2
---

# Library Exports

Firelord wraps and exports every function found in the `firebase-admin\lib\firestore\index.d.ts`.

:::note
Firelord does not support any function and methods related to `withConverter`.

Because `Meta Type` should be the single source of truth and if we allow `withConverter`, we have the second source of truth: the returns of `toFirestore` and `fromFirestore`.
:::

## Functions

With wrapping:

- queryEqual
- refEqual
- snapshotEqual
- documentId
- arrayRemove
- arrayUnion
- deleteField
- increment
- serverTimestamp
- onSnapshot
- addDoc
- createDoc
- deleteDoc
- getDoc
- getDocs
- setDoc
- updateDoc
- endAt
- endBefore
- orderBy
- startAfter
- startAt
- where
- collection
- collectionGroup
- doc
- query
- runTransaction
- writeBatch

Without wrapping:

- Timestamp
- GeoPoint
- getFirestore
- BulkWriter
- GrpcStatus
- BundleBuilder
- setLogFunction

## Type Definitions🦜

Firelord exports its own type definitions:

Field Types:

- ServerTimestamp
- DeleteField
- PossiblyReadAsUndefined

References:

- DocumentReference
- CollectionReference
- Query
- FirelordRef

Snapshots:

- DocumentSnapshot
- QuerySnapshot
- QueryDocumentSnapshot

Operations:

- RunTransaction
- WriteBatch

Meta Types:

- MetaType
- MetaTypeCreator
- AbstractMetaTypeCreator

Data Types:

- DocumentData (same as official SDK)
